# flippywindow

./: .gitignore  BuildIcon.bat  CMakeLists.txt  FlippyWindow.cpp  FlippyWindow.h  FlippyWindow.h.in  FlippyWindow.rc  LICENCE  README  README.md  TODO  dpi-aware.manifest
